service/yopass-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yopass-ingress
  namespace: yopass
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-yopass"
spec:
  tls:
  - hosts:
     - yopass.dermai.com.tw
    secretName: yopass-cert
  rules:
    - host: yopass.dermai.com.tw
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: yopass-service
              port: 
                number: 80
